8158023: SocketExceptions contain too little information sometimes

Reviewed-by: rriggs, msheppar, chegar